Updated portfolio with new changes

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <h2>Let's Connect</h2>
                 <p>Ready to discuss opportunities, collaborations, or just want to say hello?</p>
                 <div class="contact-buttons">
-                    <a href="#" class="contact-btn" onclick="downloadCV()">📄 Download My CV</a>
+                    <a href="US CV.pdf" target="_blank" class="contact-btn" onclick="downloadCV()">📄 Download My CV</a>
                     <a href="abrarhuss01@gmail.com" target="_blank" class="contact-btn">📧 Email Me</a>
                     <a href="https://github.com/abrar214/scholar-chatbot" class="contact-btn" target="_blank">💻
                         GitHub</a>
